# templates

./: CLAUDE.md  LICENSE  README.md
pnpm-monorepo/: .gitignore  .npmrc  README.md  eslint.config.js  package.json  tsconfig.json
pnpm-monorepo/apps/web/: package.json  tsconfig.json
pnpm-monorepo/apps/web/src/: index.ts
python-app/: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
python-app/scripts/: setup.sh
python-app/src/app/: __init__.py  main.py
python-app/tests/: __init__.py  test_main.py
ts-package/: .gitignore  .npmignore  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
ts-package/src/: index.ts
ts-package/tests/: index.ts
